--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<title>Aaron's Web Toys</title>
 	</head>
 	<body>
+		<noscript>This page requires JavaScript enabled.</noscript>
 		<div id="root"></div>
 	</body>
 </html>
