--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Aaron's Web Toys</title>
 	</head>
 	<body>
+		<noscript>This page requires JavaScript enabled.</noscript>
 		<div id="root"></div>
 	<script type="text/javascript" src="main.js"></script></body>
 </html>
