--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<noscript>This page requires JavaScript enabled.</noscript>
-		<div id="root"></div>
+		<div id="root" class="root"></div>
 	<script type="text/javascript" src="main.js"></script></body>
 </html>
